Updated code for single player-files